Fix What I Do text overlapping with 3D model (z-index)

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -307,7 +307,7 @@ h2.landing-info-h2 {
   .character-model {
     height: 100vh;
     bottom: 0;
-    z-index: 11;
+    z-index: 1;
     position: fixed;
   }
   .character-model::after,
